[package]
name = "rust_bridge"
version = "0.1.0"
authors = ["Masashi Honma <masashi.honma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.11"
hex = "0.4.3"
interfaces = "0.0.7"
ipnetwork = "0.18.0"
iptables = "0.4.3"
netlink-packet-core = "0.2.4"
nix = "0.20.0"
rand = "0.8.3"
rtnetlink = "0.7.0"
scopeguard = "1.1.0"
serde_json = "1.0"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }